# libfixmath

./: CMakeLists.txt
benchmarks/: Makefile
libfixmath/: fix16.c  fix16.h  uint32.c
tests/: tests.c  tests.h  tests_basic.c  tests_lerp.c  tests_str.c
